# Minimal-Flask-App

./: .breakpoints  README.md  config.py  list_of_hipes.txt  main.py  make_hipes.py  pyproject.toml  test_hipes.txt
app/: __init__.py  forms.py  models.py  views.py
app/static/css/: style.css
app/templates/: add_hipe.html  answer.html  backward.html  base.html  delete.html  flash.html  formpage.html  hipe.html  index.html  login.html  solved.html  user.html
