[tool.poetry]
name = "hipegame"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
replit = "^2.0.0"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
oauthlib = "^3.1.0"
Flask-Login = "^0.5.0"
django-user = "^0.2.1"
db = "^0.1.1"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
